test-legacy/tests/operators/summarize/frequency-invalid-mode.txt
error: invalid mode `invalid`
 --> tests/operators/summarize/frequency-invalid-mode.tql:6:56
  |
6 | summarize count=count(), options={frequency: 1s, mode: "invalid"}
  |                                                        ^^^^^^^^^ 
  |
  = hint: expected `reset`, `cumulative`, or `update`
